<resources>
    <string name="app_name">PortFolio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="about_personality_name">About Parakkal Abdhulla</string>
    <string name="personality_name">Parakkal Abdhulla MLA</string>
    <string name="about_person">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_navigation_page">NavigationPage</string>


    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!--TEMP SECTION FOR DEMO-->
    <string name="about_person_nav_click">About</string>
    <string name="news_feed_nav_click">News Feed</string>


    <string name="complaint_feed_click">Complaint</string>
    <!--COMPLAINT SECTION -->
    <string name="complaint_subject">Subject</string>
    <string name="complaint_body">Type Your Complaint Here</string>
    <string name="complaint_to">To</string>
    <string name="submit_feed_back_btn_text">SUBMIT YOUR FEEDBACK</string>




    <string name="repo_url"
        translatable="false">https://github.com/ronaldsmartin/Material-ViewPagerIndicator</string>

    <string name="simple_xml_example_activity_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/java/com/itsronald/materialviewpagerindicatorsample/SimpleXmlExampleActivity.java
    </string>
    <string name="simple_xml_example_layout_url" translatable="true">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/res/layout/activity_simple_xml_example.xml
    </string>

    <string name="simple_java_example_activity_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/java/com/itsronald/materialviewpagerindicatorsample/SimpleJavaExampleActivity.java
    </string>
    <string name="simple_java_example_layout_url" translatable="false">
        https://github.com/ronaldsmartin/Material-ViewPagerIndicator/blob/master/app/src/main/res/layout/activity_simple_java_example.xml
    </string>


    <!-- activity_main-->
    <string name="title_activity_main">Indicator Demo</string>
    <string name="subtitle_activity_main">Click an example to view it in action.</string>
    <string name="toggle_description">Toggle Description</string>
    <string name="more_examples_coming_soon">More examples coming soon!</string>


    <!-- About Person -->
    <string name="title_1">Simple XML Example</string>
    <string name="subtitle_1">Minimal configuration</string>
    <string name="content_1">
        "To use ViewPagerIndicator, all you need to do is drop it into your ViewPager layout.\n\n"

        "Add the indicator as a direct child of the ViewPager in your XML layout and set "
        "layout_gravity to position the indicator."
    </string>
    <string name="title_2">Simple XML Example</string>
    <string name="subtitle_2">Minimal configuration</string>
    <string name="content_2">
        "To use ViewPagerIndicator, all you need to do is drop it into your ViewPager layout.\n\n"
        "Add the indicator as a direct child of the ViewPager in your XML layout and set "
        "layout_gravity to position the indicator."
    </string>




    <string name="simple_xml_action_view_activity">Activity</string>
    <string name="simple_xml_action_view_layout">Layout</string>


    <!-- Simple Java Example -->
    <string name="simple_java_example_card_title">Simple Java Example</string>
    <string name="simple_java_example_card_subtitle">When XML doesn\'t meet your needs</string>
    <string name="simple_java_example_card_text">
        "To use ViewPagerIndicator from Java, all you need to do is add the view to your ViewPager.\n\n"

        "You will need to create a LayoutParams object to position the indicator when adding it."
        "ViewPagerIndicator respects most standard attributes such as layout gravity and padding.\n\n"

        "Please note that due to the implementation of the Support ViewPager widget, the "
        "indicator\'s width will be fixed to match_parent, even if you specify wrap_content."
    </string>
    <string name="simple_java_action_view_activity">Activity</string>
    <string name="simple_java_action_view_layout">Layout</string>

    <string name="paragraph">Parakkal Abdulla is an Indian politician and current MLA of Kuttiady. He is a businessman and has lived in Doha, Qatar for more than 30 years as of 2016.</string>






</resources>
