<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:layout_gravity="end"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/personality_name"

                android:hint="@string/complaint_to" />
        </android.support.design.widget.TextInputLayout>





        <android.support.design.widget.TextInputLayout
            android:id="@+id/complaint_subject_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/complaint_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:hint="@string/complaint_subject" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/complaint_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/complaint_body"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:layout_gravity="top"
                android:gravity="top"

                android:hint="@string/complaint_body" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"

            android:id="@+id/submit_feedback_btn"
            android:text="@string/submit_feed_back_btn_text"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"

        android:layout_height="wrap_content">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/fabRecordMessage"
            app:srcCompat="@drawable/ic_mic_black_24dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="Submit Your Voice Message Here"
            android:layout_alignParentBottom="true"
            android:id="@+id/voicemessageinfotext"

            android:layout_height="wrap_content" />


    </LinearLayout>







</RelativeLayout>